Revert "Fixed the Merch section - overflowing text"

--- a/css/styles.css
+++ b/css/styles.css
@@ -1133,8 +1133,7 @@ input[type='checkbox'] {
   
   .merch {
     border-radius: 25px;
-    border: 2px solid #dfdfdf;
-    box-shadow: 5px 5px 5px #dfdfdf;
+    box-shadow: -11px 11px 1px rgba(0, 0, 0, 0.3);
     margin-top: 20px;
     margin-bottom: 20px;
   }
@@ -1193,9 +1192,11 @@ input[type='checkbox'] {
     opacity: 0.1;
   }
   
-  /* .card-body {
+  .card-body {
+    height: 255px;
     background: #fff;
-  } */
+    border-radius: 0 0 25px 25px;
+  }
   
   .product-title {
     padding: 20px 20px 5px 20px;
@@ -1332,9 +1333,7 @@ input[type='checkbox'] {
   }
   
   .product-price {
-    /* position: absolute; */
-	position: relative;
-	margin-top: 20px;
+    position: absolute;
     background: #0191FB;
     padding: 7px 20px;
     text-align: center;
@@ -1343,6 +1342,8 @@ input[type='checkbox'] {
     font-weight: 200;
     color: #fff;
     border-radius: 7px;
+    margin-top: -13px;
+    margin-left: -130px;
     box-shadow: -10px 20px 15px -10px rgba(17, 71, 233, 0.3);
   }
   
@@ -1350,16 +1351,17 @@ input[type='checkbox'] {
     margin-left: 9px;
   }
   .paystack-buynow {
-    position: relative;
-	margin: 0px;
+    position: absolute;
+   
     padding: 7px 20px;
     text-align: center;
     display: inline-block;
     font-size: 24px;
     font-weight: 200;
     border-radius: 7px;
-	margin-top: 20px;
-	margin-bottom: 20px;
+    margin-top: 35px;
+    margin-left: -100px;
+    
   }
   
   
@@ -2068,7 +2070,7 @@ a:hover.back-to-top {
  and (min-device-width: 175px) 
 { 
     
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 10px !important;
@@ -2096,7 +2098,7 @@ a:hover.back-to-top {
         margin-left: -120px !important;
         
       }
-   */
+  
 
 }
 
@@ -2106,7 +2108,7 @@ a:hover.back-to-top {
  and (min-device-width: 222px) 
 { 
     
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 10px !important;
@@ -2133,7 +2135,7 @@ a:hover.back-to-top {
         margin-top: -40px !important;
         margin-left: -120px !important;
         
-      } */
+      }
   
 
 }
@@ -2144,7 +2146,7 @@ a:hover.back-to-top {
  and (min-device-width: 222px) 
 { 
     
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 10px;
@@ -2171,7 +2173,7 @@ a:hover.back-to-top {
         margin-top: -10px !important;
         margin-left: -130px !important;
         
-      } */
+      }
   
 
 }
@@ -2182,7 +2184,7 @@ a:hover.back-to-top {
  and (min-device-width: 256px) 
 { 
     
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 10px;
@@ -2209,7 +2211,7 @@ a:hover.back-to-top {
         margin-top: 20px !important;
         margin-left: -130px !important;
         
-      } */
+      }
   
 
 }
@@ -2219,7 +2221,7 @@ a:hover.back-to-top {
  and (max-device-width: 456px) 
  and (min-device-width: 315px) 
 { 
-    /* .merch {
+    .merch {
         margin-left: 30px;
         margin-right: 30px;
     }
@@ -2264,7 +2266,7 @@ a:hover.back-to-top {
         margin-top: 20px !important;
         margin-left: -120px !important;
         
-      } */
+      }
 
 }
 
@@ -2274,8 +2276,8 @@ a:hover.back-to-top {
  and (max-device-width: 496px) 
  and (min-device-width: 456px) 
 { 
-    /*.merch {
-         margin-left: 40px;
+    .merch {
+        margin-left: 40px;
         margin-right: 40px;
     }
     .product-price {
@@ -2319,7 +2321,7 @@ a:hover.back-to-top {
         margin-top: 51px !important;
         margin-left: -120px !important;
         
-      } */
+      }
 
 }
 
@@ -2329,7 +2331,7 @@ a:hover.back-to-top {
  and (max-device-width: 575px) 
  and (min-device-width: 496px) 
 { 
-    /* .merch {
+    .merch {
         margin-left: 60px;
         margin-right: 60px;
     }
@@ -2346,7 +2348,7 @@ a:hover.back-to-top {
         margin-top: -30px !important;
         margin-left: -120px !important;
         box-shadow: -10px 20px 15px -10px rgba(17, 71, 233, 0.3);
-      } 
+      }
       .product-title {
         padding: 20px 20px 5px 20px;
         display: block;
@@ -2362,7 +2364,7 @@ a:hover.back-to-top {
        
         text-transform: uppercase;
       }
-       .paystack-buynow {
+      .paystack-buynow {
         position: absolute;
        
         padding: 7px 20px;
@@ -2374,7 +2376,7 @@ a:hover.back-to-top {
         margin-top: 51px !important;
         margin-left: -120px !important;
         
-      } */
+      }
 
 }
 
@@ -2383,7 +2385,7 @@ a:hover.back-to-top {
  and (max-device-width: 991px) 
  and (min-device-width: 768px) 
 { 
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 15px;
@@ -2396,7 +2398,7 @@ a:hover.back-to-top {
         margin-top: -40px !important;
         margin-left: -40px !important;
         box-shadow: -10px 20px 15px -10px rgba(17, 71, 233, 0.3);
-      } 
+      }
       .product-title {
         padding: 20px 20px 5px 20px;
         display: block;
@@ -2412,7 +2414,7 @@ a:hover.back-to-top {
        
         text-transform: uppercase;
       }
-       .paystack-buynow {
+      .paystack-buynow {
         position: absolute;
        
         padding: 7px 20px;
@@ -2424,7 +2426,7 @@ a:hover.back-to-top {
         margin-top: 5px;
         margin-left: -100px;
         
-      } */
+      }
 
 }
 
@@ -2433,7 +2435,7 @@ a:hover.back-to-top {
  and (max-device-width: 1198px) 
  and (min-device-width: 991px) 
 { 
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 15px;
@@ -2474,11 +2476,11 @@ a:hover.back-to-top {
         margin-top: 5px;
         margin-left: -100px;
         
-      } */
+      }
 
 }
 @media (max-width: 1199px)  {
-    /* .product-price {
+    .product-price {
         position: absolute;
         background: #0191FB;
         padding: 7px 15px;
@@ -2519,7 +2521,7 @@ a:hover.back-to-top {
         margin-top: 5px;
         margin-left: -100px;
         
-      } */
+      }
    
 }
 
